objects/COS_What_New_URL__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <fields>
        <fullName>COS_New_URL__c</fullName>
        <label>COS New URL</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>COS_What_New__c</fullName>
        <label>COS What New</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>COS_What_New_description__c</fullName>
        <label>COS What New Description</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>COS Whats New URL</label>
</CustomObject>